change some text into japanese

--- a/templates/footer.tmpl
+++ b/templates/footer.tmpl
@@ -1,6 +1,7 @@
 <div id="footer">
 <hr></hr>
-(c) Alpha Corp.
+<h3>DaijoBB ダイジョッブ フォーラム<br/>
+ヒトリジャナイ (c) 2012</h3>
 <!-- footer div ends here -->
 </div>
 <!-- page-wrapper div ends here -->
