--- a/templates/index.tmpl
+++ b/templates/index.tmpl
@@ -2,7 +2,7 @@
 
 <div id="main">
  <h3>何でもいいフォ－ラム</h3>
- <a href="index.pl?rm=posttopic">Create topic</a>
+ <a href="index.pl?rm=posttopic">トピックを作成</a>
  <table class="topic-table">
  <tbody>
   <tr class="table-list-head">
