--- a/templates/postconfirm.tmpl
+++ b/templates/postconfirm.tmpl
@@ -1,6 +1,6 @@
 <TMPL_INCLUDE name="header.tmpl">
 <div id="main">
-<span>Post confirmation</span>
+<span>本文の確認</span>
 <TMPL_INCLUDE name="post.tmpl">
 <div id="stylized" class="no-decoration">
 <form action="index.pl" method="post">
@@ -9,8 +9,8 @@
  <input type="hidden" name="<TMPL_VAR name='HP_NAME'>" value="<TMPL_VAR name='HP_VALUE'>"/>
 </TMPL_LOOP>
 <div class="posting-form">
-<button type="submit" style="width:60px">Confirm</button>
-<button type="button" onclick="history.back()" style="width:60px;margin-left:4px">Edit</button>
+<button type="submit" style="width:60px">確認</button>
+<button type="button" onclick="history.back()" style="width:60px;margin-left:4px">エディット</button>
 </div>
 <div class="spacer"></div>
 </form>
