--- a/templates/posttopic.tmpl
+++ b/templates/posttopic.tmpl
@@ -37,8 +37,8 @@ tinyMCE.init({
         <input type="text" name="POST_TITLE" maxlength="20" style="width:618px">
         <textarea name="POST_BODY" style="width:100%; height:200px"></textarea>
         <div id="posttopic" class="margin-center">
-        <button type="submit">Post</button>
-        <button type="button" onclick="tinyMCE.get('content').setContent('')"/>Reset</button>
+        <button type="submit">投稿</button>
+        <button type="button" onclick="tinyMCE.get('content').setContent('')"/>リセット</button>
         </div>
         <div class="spacer"></div>
 </form>
