--- a/templates/register.tmpl
+++ b/templates/register.tmpl
@@ -7,32 +7,32 @@
 <h1>Join now!</h1>
 <p>Please fill this sign up form to become a member.</p>
 
-<label>Name
+<label>お名前
 <span class="small">Add your name</span>
 </label>
 <input type="text" name="FULLNAME"/>
 
-<label>Email
-<span class="small">Add a valid address</span>
+<label>メール
+<span class="small">Add a valid e-mail address</span>
 </label>
 <input type="text" name="EMAIL" />
 
 
-<label>Username
+<label>ユーザー名前
 <span class="small">Your nickname</span>
 </label>
 <input type="text" name="USERNAME" />
 
-<label>Password
-<span class="small">Min. size 6 chars</span>
+<label>パスワード
+<span class="small">Password</span>
 </label>
 <input type="password" name="PASSWORD"/>
 
-<label>Confirm Password
-<span class="small">Retype your password</span>
+<label>パスワード
+<span class="small">も一度</span>
 </label>
 <input type="password" name="CONFIRM_PASSWORD"/>
- <button type="submit">Register</button>
+ <button type="submit">登録</button>
 <div class="spacer"></div>
 </form>
 <!-- main div ends here-->
