--- a/templates/post.tmpl
+++ b/templates/post.tmpl
@@ -36,8 +36,8 @@ function confirmDelete(url){
  <input type="hidden" name="<TMPL_VAR name='HP_NAME'>" value="<TMPL_VAR name='HP_VALUE'>"/>
 </TMPL_LOOP>
 <div class="posting-form">
-<button type="button" onclick="window.open('index.pl?rm=do_postaction&mode=reply&pid=<TMPL_VAR name="PID">&tid=<TMPL_VAR name="TID">&page=<TMPL_VAR name="NPAGE">','_self')" style="width:60px">Reply</button>
-<TMPL_IF name="ALLOW_DELETE"><button type="button" onclick="confirmDelete('index.pl?rm=do_postaction&mode=delete&pid=<TMPL_VAR name="PID">&tid=<TMPL_VAR name="TID">&page=<TMPL_VAR name="NPAGE">')" style="width:60px;margin-left:4px">Delete</button></TMPL_IF>
+<button type="button" onclick="window.open('index.pl?rm=do_postaction&mode=reply&pid=<TMPL_VAR name="PID">&tid=<TMPL_VAR name="TID">&page=<TMPL_VAR name="NPAGE">','_self')" style="width:60px">返事</button>
+<TMPL_IF name="ALLOW_DELETE"><button type="button" onclick="confirmDelete('index.pl?rm=do_postaction&mode=delete&pid=<TMPL_VAR name="PID">&tid=<TMPL_VAR name="TID">&page=<TMPL_VAR name="NPAGE">')" style="width:60px;margin-left:4px">デリート</button></TMPL_IF>
 </div>
 <div class="spacer"></div>
 </form>
